lang/tests/contract/common/ui/fail/39-too-many-extern-in-interface.rs
use liquid_lang as liquid;

#[liquid::interface(name = auto)]
mod foo {
    extern "liquid" {
        fn bar(&self);
    }

    extern "liquid" {
        fn baz(&self);
    }
}

fn main() {}
